APIs for logs, upload
